Apply consolidation of chat channels