@@ -23,7 +23,6 @@ import bisq.chat.bisqeasy.offerbook.BisqEasyOfferbookSelectionService;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannel;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeChannelService;
 import bisq.chat.bisqeasy.open_trades.BisqEasyOpenTradeSelectionService;
-import bisq.chat.bisqeasy.private_chats.BisqEasyPrivateChatChannelSelectionService;
 import bisq.chat.common.CommonChannelSelectionService;
 import bisq.chat.common.CommonPublicChatChannel;
 import bisq.chat.common.CommonPublicChatChannelService;
@@ -42,31 +41,37 @@ import bisq.user.UserService;
 import bisq.user.identity.UserIdentity;
 import bisq.user.identity.UserIdentityService;
 import bisq.user.profile.UserProfile;
-import bisq.user.profile.UserProfileService;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
 import javax.annotation.Nullable;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static bisq.chat.common.SubDomain.*;
+
 @Slf4j
-@Getter
 public class ChatService implements Service {
     private final PersistenceService persistenceService;
     private final NetworkService networkService;
     private final UserService userService;
     private final UserIdentityService userIdentityService;
-    private final UserProfileService userProfileService;
+
+    @Getter
     private final ChatNotificationService chatNotificationService;
+    @Getter
     private final BisqEasyOfferbookChannelService bisqEasyOfferbookChannelService;
+    @Getter
     private final BisqEasyOpenTradeChannelService bisqEasyOpenTradeChannelService;
+    @Getter
     private final Map<ChatChannelDomain, CommonPublicChatChannelService> commonPublicChatChannelServices = new HashMap<>();
-    private final Map<ChatChannelDomain, TwoPartyPrivateChatChannelService> twoPartyPrivateChatChannelServices = new HashMap<>();
+    @Getter
     private final Map<ChatChannelDomain, ChatChannelSelectionService> chatChannelSelectionServices = new HashMap<>();
+    @Getter
     private final LeavePrivateChatManager leavePrivateChatManager;
+
+    private final Map<ChatChannelDomain, TwoPartyPrivateChatChannelService> twoPartyPrivateChatChannelServices = new HashMap<>();
 
     public ChatService(PersistenceService persistenceService,
                        NetworkService networkService,
@@ -77,7 +82,6 @@ public class ChatService implements Service {
         this.networkService = networkService;
         this.userService = userService;
         this.userIdentityService = userService.getUserIdentityService();
-        this.userProfileService = userService.getUserProfileService();
 
         chatNotificationService = new ChatNotificationService(persistenceService,
                 networkService,
@@ -85,53 +89,36 @@ public class ChatService implements Service {
                 systemNotificationService,
                 settingsService,
                 userIdentityService,
-                userProfileService);
+                userService.getUserProfileService());
 
         // BISQ_EASY
         bisqEasyOfferbookChannelService = new BisqEasyOfferbookChannelService(persistenceService,
                 networkService,
                 userService);
+        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
+                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
+
         bisqEasyOpenTradeChannelService = new BisqEasyOpenTradeChannelService(persistenceService,
                 networkService,
                 userService);
-
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
-
-        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OFFERBOOK,
-                new BisqEasyOfferbookSelectionService(persistenceService, bisqEasyOfferbookChannelService));
         chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_OPEN_TRADES,
                 new BisqEasyOpenTradeSelectionService(persistenceService, bisqEasyOpenTradeChannelService,
                         userIdentityService));
-        chatChannelSelectionServices.put(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT,
-                new BisqEasyPrivateChatChannelSelectionService(persistenceService,
-                        twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT),
-                        userIdentityService));
-
 
         // DISCUSSION
         addToCommonPublicChatChannelServices(ChatChannelDomain.DISCUSSION,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bisq"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "bitcoin"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "markets"),
-                        new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, "offTopic")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.DISCUSSION);
-        addToChatChannelSelectionServices(ChatChannelDomain.DISCUSSION);
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.DISCUSSION, DISCUSSION_BISQ)));
 
-        // EVENTS
-        addToCommonPublicChatChannelServices(ChatChannelDomain.EVENTS,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "conferences"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "meetups"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "podcasts"),
-                        new CommonPublicChatChannel(ChatChannelDomain.EVENTS, "tradeEvents")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.EVENTS);
-        addToChatChannelSelectionServices(ChatChannelDomain.EVENTS);
+        twoPartyPrivateChatChannelServices.put(ChatChannelDomain.DISCUSSION,
+                new TwoPartyPrivateChatChannelService(persistenceService,
+                        networkService,
+                        userService,
+                        ChatChannelDomain.DISCUSSION));
+        addToChatChannelSelectionServices(ChatChannelDomain.DISCUSSION);
 
         // SUPPORT
         addToCommonPublicChatChannelServices(ChatChannelDomain.SUPPORT,
-                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "support"),
-                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "questions"),
-                        new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, "reports")));
-        addToTwoPartyPrivateChatChannelServices(ChatChannelDomain.SUPPORT);
+                List.of(new CommonPublicChatChannel(ChatChannelDomain.SUPPORT, SUPPORT_SUPPORT)));
         addToChatChannelSelectionServices(ChatChannelDomain.SUPPORT);
 
         leavePrivateChatManager = new LeavePrivateChatManager(bisqEasyOpenTradeChannelService,
@@ -148,13 +135,13 @@ public class ChatService implements Service {
                 bisqEasyOpenTradeChannelService.initialize()));
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::initialize)
-                .collect(Collectors.toList()));
-        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
+                .toList());
+        list.addAll(getTwoPartyPrivateChatChannelServices()
                 .map(PrivateChatChannelService::initialize)
-                .collect(Collectors.toList()));
+                .toList());
         list.addAll(chatChannelSelectionServices.values().stream()
                 .map(ChatChannelSelectionService::initialize)
-                .collect(Collectors.toList()));
+                .toList());
 
         list.add(chatNotificationService.initialize());
 
@@ -168,13 +155,13 @@ public class ChatService implements Service {
                 bisqEasyOpenTradeChannelService.shutdown()));
         list.addAll(commonPublicChatChannelServices.values().stream()
                 .map(CommonPublicChatChannelService::shutdown)
-                .collect(Collectors.toList()));
-        list.addAll(twoPartyPrivateChatChannelServices.values().stream()
+                .toList());
+        list.addAll(getTwoPartyPrivateChatChannelServices()
                 .map(PrivateChatChannelService::shutdown)
-                .collect(Collectors.toList()));
+                .toList());
         list.addAll(chatChannelSelectionServices.values().stream()
                 .map(ChatChannelSelectionService::shutdown)
-                .collect(Collectors.toList()));
+                .toList());
 
         list.add(chatNotificationService.shutdown());
 
@@ -198,22 +185,21 @@ public class ChatService implements Service {
         }
     }
 
-    public Optional<TwoPartyPrivateChatChannel> createAndSelectTwoPartyPrivateChatChannel(ChatChannelDomain chatChannelDomain, UserProfile peer) {
-        if (chatChannelDomain == ChatChannelDomain.BISQ_EASY_OFFERBOOK ||
-                chatChannelDomain == ChatChannelDomain.BISQ_EASY_OPEN_TRADES) {
-            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).findOrCreateChannel(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT, peer);
-            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT).selectChannel(channel));
-            return optionalChannel;
-        } else {
-            Optional<TwoPartyPrivateChatChannel> optionalChannel = twoPartyPrivateChatChannelServices.get(chatChannelDomain).findOrCreateChannel(chatChannelDomain, peer);
-            optionalChannel.ifPresent(channel -> getChatChannelSelectionService(chatChannelDomain).selectChannel(channel));
-            return optionalChannel;
-        }
+    public Optional<TwoPartyPrivateChatChannel> createAndSelectTwoPartyPrivateChatChannel(ChatChannelDomain chatChannelDomain,
+                                                                                          UserProfile peer) {
+        return findTwoPartyPrivateChatChannelService(chatChannelDomain).stream()
+                .flatMap(twoPartyPrivateChatChannelService ->
+                        twoPartyPrivateChatChannelService.findOrCreateChannel(chatChannelDomain, peer).stream()
+                                .map(channel -> {
+                                    getChatChannelSelectionService(chatChannelDomain).selectChannel(channel);
+                                    return channel;
+                                }))
+                .findAny();
     }
 
     public boolean isIdentityUsed(UserIdentity userIdentity) {
         boolean usedInAnyPrivateChannel = Stream.concat(bisqEasyOpenTradeChannelService.getChannels().stream(),
-                        twoPartyPrivateChatChannelServices.values().stream()
+                        getTwoPartyPrivateChatChannelServices()
                                 .flatMap(c -> c.getChannels().stream()))
                 .anyMatch(c -> c.getMyUserIdentity().equals(userIdentity));
 
@@ -235,9 +221,6 @@ public class ChatService implements Service {
             case BISQ_EASY_OPEN_TRADES -> {
                 return getBisqEasyOpenTradesSelectionService();
             }
-            case BISQ_EASY_PRIVATE_CHAT -> {
-                return getBisqEasyPrivateChatChannelSelectionService();
-            }
         }
         return chatChannelSelectionServices.get(chatChannelDomain);
     }
@@ -250,19 +233,8 @@ public class ChatService implements Service {
         return (BisqEasyOpenTradeSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_OPEN_TRADES);
     }
 
-    public BisqEasyPrivateChatChannelSelectionService getBisqEasyPrivateChatChannelSelectionService() {
-        return (BisqEasyPrivateChatChannelSelectionService) getChatChannelSelectionServices().get(ChatChannelDomain.BISQ_EASY_PRIVATE_CHAT);
-    }
-
-    private void addToTwoPartyPrivateChatChannelServices(ChatChannelDomain chatChannelDomain) {
-        twoPartyPrivateChatChannelServices.put(chatChannelDomain,
-                new TwoPartyPrivateChatChannelService(persistenceService,
-                        networkService,
-                        userService,
-                        chatChannelDomain));
-    }
-
-    private void addToCommonPublicChatChannelServices(ChatChannelDomain chatChannelDomain, List<CommonPublicChatChannel> channels) {
+    private void addToCommonPublicChatChannelServices(ChatChannelDomain chatChannelDomain,
+                                                      List<CommonPublicChatChannel> channels) {
         commonPublicChatChannelServices.put(chatChannelDomain,
                 new CommonPublicChatChannelService(persistenceService,
                         networkService,
@@ -272,11 +244,24 @@ public class ChatService implements Service {
     }
 
     private void addToChatChannelSelectionServices(ChatChannelDomain chatChannelDomain) {
+        Optional<TwoPartyPrivateChatChannelService> privateChatChannelService = findTwoPartyPrivateChatChannelService(chatChannelDomain);
         chatChannelSelectionServices.put(chatChannelDomain,
                 new CommonChannelSelectionService(persistenceService,
-                        twoPartyPrivateChatChannelServices.get(chatChannelDomain),
+                        privateChatChannelService,
                         commonPublicChatChannelServices.get(chatChannelDomain),
                         chatChannelDomain,
                         userIdentityService));
+    }
+
+    public Optional<TwoPartyPrivateChatChannelService> findTwoPartyPrivateChatChannelService(ChatChannelDomain chatChannelDomain) {
+        return Optional.ofNullable(twoPartyPrivateChatChannelServices.get(chatChannelDomain));
+    }
+
+    public TwoPartyPrivateChatChannelService getTwoPartyPrivateChatChannelService() {
+        return findTwoPartyPrivateChatChannelService(ChatChannelDomain.DISCUSSION).orElseThrow();
+    }
+
+    public Stream<TwoPartyPrivateChatChannelService> getTwoPartyPrivateChatChannelServices() {
+        return twoPartyPrivateChatChannelServices.values().stream();
     }
 }
